# AI-Security-Platform

./: .gitignore  .gitleaks.toml  LICENSE  README.md  docker-compose.production.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0001_initial_schema.py  20260509_0002_connector_configs_and_mcp.py  20260513_0003_asset_graph_v2.py  20260608_0004_red_team_v2.py  20260610_0005_org_scoping.py  20260611_0006_enable_rls.py  20260703_0007_revive_policies.py  20260704_0008_revive_governance.py  20260708_0009_revive_mcp.py
backend/app/: __init__.py  main.py
backend/app/aibom/: blast_radius.py  builder.py  coerce.py  drift.py  risk.py
backend/app/aiguard/: __init__.py  bridge.py  judge.py  publish.py  response.py  service.py
backend/app/anomaly/: attack_graph.py  detector.py
backend/app/api/: middleware.py
backend/app/api/v1/: aibom.py  aiguard.py  anomalies.py  assets.py  auth.py  benchmark.py  compliance.py  connectors.py  dashboard.py  dashboards.py  discovery.py  evaluations.py  findings.py  health.py  idp_admin.py  mcp.py  narratives.py  policies.py  redteam.py  remediation.py  reports.py  risk_index.py  runtime.py  scim.py  siem.py  suppressions.py  test_cases.py  threat_intel.py  validation.py
backend/app/auth/: api_key_service.py  dependencies.py  jwt_service.py  rbac.py  user_provisioning.py
backend/app/benchmark/: __init__.py  corpus.py  scorecard.py
backend/app/compliance/: evidence_pack.py  frameworks.py
backend/app/connectors/: anthropic_connector.py  azure_openai_connector.py  base.py  bedrock_connector.py  generic_openai_connector.py  ollama_connector.py  openai_connector.py  registry.py
backend/app/connectors/discovery/: __init__.py  base.py  cloud_stubs.py  mock_connector.py  registry.py
backend/app/core/: config.py  logging.py  tiers.py
backend/app/db/: base.py  session.py  tenancy.py
backend/app/db/models/: __init__.py  ai_asset.py  api_key.py  asset_changelog.py  asset_relationship.py  asset_tag.py  connector.py  deployment.py  (+12 more)
backend/app/detectors/: __init__.py  advice.py  base.py  code_lang.py  injection.py  normalize.py  registry.py  sensitive.py  text_safety.py  urls.py  util.py
backend/app/epa/: __init__.py  agent_epa.py  cross_agent.py  envelope.py  fleet.py  service.py  store.py
backend/app/evaluation/: runner.py
backend/app/feedback/: __init__.py  metrics.py  service.py  store.py  suppression.py
backend/app/identity/: adapter.py  oidc_adapter.py  registry.py  saml_adapter.py  secret_resolver.py  types.py
backend/app/integrations/: __init__.py  litellm_callback.py  portkey_guardrail.py
backend/app/mcp/: gateway.py  inspector.py  service.py
backend/app/narratives/: __init__.py  builder.py  narrative.py  pipeline.py  store.py
backend/app/observability/: __init__.py  metrics.py  middleware.py  tracing.py
backend/app/patterns/: __init__.py  compiled.py  evaluator.py  promotion.py  registry.py
backend/app/policy/: cache.py  compiled.py  pipeline.py  stage1.py  stage2_detectors.py  stage2_heuristic.py  stage2_onnx.py  stage2_provision.py  stage3_judge.py  types.py
backend/app/provisioning/: __init__.py  model_provision.py
backend/app/redteam/: benchmark.py  benchmark_service.py  campaign.py  encodings.py  generator.py  judge.py  model_connectors.py  personas.py  remediation.py  scanners.py  service.py  strategies.py
backend/app/reports/: builder.py  efficacy.py
backend/app/scim/: auth.py  filter.py  groups.py  patch.py  serializers.py  types.py  users.py
backend/app/security/: audit_log.py  field_crypto.py  headers.py  rate_limit.py  secret_gate.py  secrets.py
backend/app/services/: policy_pubsub.py  redis_client.py  sync_service.py
backend/app/siem/: exporters.py  forwarder.py
backend/app/soar/: incidents.py
backend/app/spm/: __init__.py  autoscan.py  iam.py  risk_index.py
backend/app/streaming/: __init__.py  events.py  kafka_backend.py  memory_backend.py  serde.py
backend/app/telemetry/: causal.py  clickhouse_writer.py  dashboard_queries.py  runtime_event.py
backend/app/testcases/: library.py
backend/app/threat_intel/: anonymize.py  clustering.py  engine.py  stix_export.py
backend/app/validation/: __init__.py  detector_efficacy.py  detector_eval_set.py  harness.py  scenarios.py
backend/loadtest/: locustfile.py
backend/scripts/: epa_consumer.py  export_stage2_onnx.py  policy_subscriber.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_aibom_api.py  test_aibom_function.py  test_aibom_routes_e2e.py  test_audit_log_e2e.py  test_connector_routes_e2e.py  test_eval_loop_e2e.py  test_mcp_api.py  test_mcp_routes_e2e.py  test_policy_pubsub_e2e.py  test_scim_groups_e2e.py  test_scim_users_e2e.py  test_siem_api.py  test_tenant_guard.py  test_tenant_isolation.py  test_v2_api_e2e.py  test_v2_sync_pipeline.py
backend/tests/unit/: test_aibom_builder.py  test_aibom_coerce.py  test_aibom_drift.py  test_aibom_risk.py  test_aiguard_detectors.py  test_aiguard_judge.py  test_aiguard_publish.py  test_aiguard_rapide_merge.py  test_anomaly_detector.py  test_anthropic_connector.py  test_api_key_format.py  test_attack_graph.py  test_audit_exceptions.py  test_audit_log.py  test_autoscan.py  test_azure_openai_connector.py  test_bedrock_connector.py  test_benchmark_service.py  test_blast_radius.py  test_causal.py  test_clickhouse_writer.py  test_cloud_connector_stubs.py  test_compliance_evidence_pack.py  test_compliance_matrix.py  test_config_cors.py  test_connector_registry.py  test_connectors_base.py  test_cross_agent.py  test_dashboard_queries.py  test_dependency_locks.py  test_detection_scorecard.py  test_detector_efficacy.py  test_discovery_connectors.py  test_efficacy_report.py  test_epa.py  test_epa_service.py  test_epa_supervision.py  test_feedback.py  test_field_crypto.py  test_generic_openai_connector.py  (+54 more)
sdks/python/: README.md  pyproject.toml
sdks/python/platform_sdk/: __init__.py  _routing.py  anthropic.py  openai.py
sdks/python/tests/: test_routing.py
(+132 files in other folders)
