[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-platform-backend"
version = "0.1.0"
description = "Control plane for the AI security platform — Sprint 1 (infrastructure + identity federation)"
requires-python = ">=3.11"
license = { text = "BUSL-1.1" }
authors = [{ name = "Ryan Wallace" }]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",

    # Cache / pub-sub
    "redis[hiredis]>=5.2",

    # Identity federation
    "authlib>=1.3.2",          # OIDC client (battle-tested)
    "httpx>=0.27",             # required by authlib

    # Auth primitives
    "python-jose[cryptography]>=3.3",  # JWT
    "passlib[bcrypt]>=1.7.4",          # password / api-key hashing
    "bcrypt<5.0,>=4.0",                # passlib pin
    "cryptography>=42.0",              # field-level encryption (Fernet)

    # Logging
    "structlog>=24.4",

    # Misc
    "python-dotenv>=1.0",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "bandit>=1.7",
    "factory-boy>=3.3",
    "freezegun>=1.5",
]

# SAML adapter is deferred — uncomment when implementing
# saml = ["python3-saml>=1.16"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (require postgres/redis)",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["app/**/migrations/*", "app/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
