[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-platform-backend"
version = "0.1.0"
description = "Control plane for the AI security platform — Sprint 1 (infrastructure + identity federation)"
requires-python = ">=3.11"
license = { text = "BUSL-1.1" }
authors = [{ name = "Ryan Wallace" }]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",

    # Cache / pub-sub
    "redis[hiredis]>=5.2",

    # Event streaming — Redpanda (Kafka-compatible) telemetry spine
    "aiokafka>=0.11",

    # Telemetry — ClickHouse (sync HTTP client; we wrap async via run_in_executor
    # to avoid pulling in an experimental async fork).
    "clickhouse-connect>=0.8",

    # AWS Bedrock connector
    "boto3>=1.34",

    # ONNX Stage 2 inference (Sprint 3)
    "onnxruntime>=1.18",

    # Identity federation
    "authlib>=1.3.2",          # OIDC client (battle-tested)
    "httpx>=0.27",             # required by authlib
    "python3-saml>=1.16",      # SAML 2.0 (XMLDSig via xmlsec wheels)
    "python-multipart>=0.0.9", # SAML ACS form-data parsing

    # Auth primitives
    "python-jose[cryptography]>=3.3",  # JWT
    "passlib[bcrypt]>=1.7.4",          # password / api-key hashing
    "bcrypt<5.0,>=4.0",                # passlib pin
    "cryptography>=42.0",              # field-level encryption (Fernet)

    # Logging
    "structlog>=24.4",

    # Misc
    "python-dotenv>=1.0",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "bandit>=1.7",
    "factory-boy>=3.3",
    "freezegun>=1.5",
]

# SAML 2.0 is now a hard dependency above. See app/identity/saml_adapter.py.

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
# Ship the JSON pattern library (data, not code) inside wheels so non-editable
# installs can load it via importlib/Path.
"app.patterns.library" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Bind the asyncio event loop to the session so SQLAlchemy's async engine
# AND the singleton redis client (both of which latch to the loop at first
# connect) don't get torn down between tests with "Event loop is closed".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (require postgres/redis)",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["app/**/migrations/*", "app/main.py"]

[tool.coverage.report]
# Coverage RATCHET, not the target. The standard target is 80% (see
# ~/.claude/rules and docs/ROADMAP-RAPIDE.md testing workstream). The suite
# today genuinely covers ~25% of app/ — most domain modules (siem, soar,
# threat_intel, scim filters) have no tests yet. Enforcing 80% against that
# reality just keeps CI permanently red, which hides real regressions.
#
# So this floor is pinned just below current actual coverage and is meant
# to be RATCHETED UP as the testing workstream adds tests — never lowered.
# Raise it whenever a sprint pushes measured coverage past the next rung.
# Ratchet rungs toward the 80% target: 24 → 40 → 60 → 80.
# A2 added contract tests for siem (6 forwarders), soar, threat_intel, and
# connector base — unit-only coverage is now ~36%; CI's full suite (PG+redis
# integration) clears 40. Next rung (60) needs scim filters + connector
# generate() paths + api routers covered.
fail_under = 40
show_missing = true
skip_covered = false
